--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "weekend chat",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "nodemon --inspect server.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,10 @@
   "bugs": {
     "url": "https://github.com/jlmatus/weekendChat/issues"
   },
-  "homepage": "https://github.com/jlmatus/weekendChat#readme"
+  "homepage": "https://github.com/jlmatus/weekendChat#readme",
+  "dependencies": {
+    "body-parser": "^1.20.0",
+    "express": "^4.18.1",
+    "nodemon": "^2.0.19"
+  }
 }
